// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/ContentManagement/Product/Add-v2/lib/section/ProductDetail/index render 1`] = `
<div
  style={
    Object {
      "border": "2px dashed #E4E7E9",
      "borderTop": "none",
      "position": "relative",
    }
  }
>
  <SectionMark
    description="This section automatically added product detail link, based on product detail mapping data"
    isDisplay={true}
    nonmandatory={false}
    onChange={[Function]}
    title="Product Detail"
  />
  <div
    style={
      Object {
        "marginInline": "auto",
        "maxWidth": "1280px",
        "padding": "5rem 4rem",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "16px 0",
          "marginBottom": "5rem",
        }
      }
    >
      <Typography
        className=""
        color="general-main"
        inline={false}
        variant="h3"
        weight="medium"
      >
        test
      </Typography>
      <TextField
        colorPlaceholder="black"
        control={Object {}}
        disabled={false}
        fontSize={14}
        multiline={true}
        name="productDetailsId[0].description"
        noSpacing={false}
        placeholder="Ketik konten judul di sini dalam Bahasa.."
        position="left"
        weight="normal"
      />
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={3}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          md={6}
          xs={12}
        >
          <WithStyles(ForwardRef(Card))
            className=""
          >
            <div>
              <Memo />
            </div>
            <Styled(MuiBox)
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <WithStyles(ForwardRef(CardContent))>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="h5"
                    weight="medium"
                  >
                    Automatically Generated
                  </Typography>
                </div>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="caption"
                    weight="normal"
                  >
                    This card was automatically generated by product detail mapping data
                  </Typography>
                </div>
              </WithStyles(ForwardRef(CardContent))>
            </Styled(MuiBox)>
          </WithStyles(ForwardRef(Card))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          md={6}
          xs={12}
        >
          <WithStyles(ForwardRef(Card))
            className=""
          >
            <div>
              <Memo />
            </div>
            <Styled(MuiBox)
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <WithStyles(ForwardRef(CardContent))>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="h5"
                    weight="medium"
                  >
                    Automatically Generated
                  </Typography>
                </div>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="caption"
                    weight="normal"
                  >
                    This card was automatically generated by product detail mapping data
                  </Typography>
                </div>
              </WithStyles(ForwardRef(CardContent))>
            </Styled(MuiBox)>
          </WithStyles(ForwardRef(Card))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </div>
    <div
      style={
        Object {
          "margin": "16px 0",
          "marginBottom": 0,
        }
      }
    >
      <Typography
        className=""
        color="general-main"
        inline={false}
        variant="h3"
        weight="medium"
      >
        test2
      </Typography>
      <TextField
        colorPlaceholder="black"
        control={Object {}}
        disabled={false}
        fontSize={14}
        multiline={true}
        name="productDetailsId[1].description"
        noSpacing={false}
        placeholder="Ketik konten judul di sini dalam Bahasa.."
        position="left"
        weight="normal"
      />
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={3}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          md={6}
          xs={12}
        >
          <WithStyles(ForwardRef(Card))
            className=""
          >
            <div>
              <Memo />
            </div>
            <Styled(MuiBox)
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <WithStyles(ForwardRef(CardContent))>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="h5"
                    weight="medium"
                  >
                    Automatically Generated
                  </Typography>
                </div>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="caption"
                    weight="normal"
                  >
                    This card was automatically generated by product detail mapping data
                  </Typography>
                </div>
              </WithStyles(ForwardRef(CardContent))>
            </Styled(MuiBox)>
          </WithStyles(ForwardRef(Card))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          md={6}
          xs={12}
        >
          <WithStyles(ForwardRef(Card))
            className=""
          >
            <div>
              <Memo />
            </div>
            <Styled(MuiBox)
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <WithStyles(ForwardRef(CardContent))>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="h5"
                    weight="medium"
                  >
                    Automatically Generated
                  </Typography>
                </div>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="caption"
                    weight="normal"
                  >
                    This card was automatically generated by product detail mapping data
                  </Typography>
                </div>
              </WithStyles(ForwardRef(CardContent))>
            </Styled(MuiBox)>
          </WithStyles(ForwardRef(Card))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </div>
  </div>
</div>
`;

exports[`src/containers/ContentManagement/Product/Add-v2/lib/section/ProductDetail/index render cardList 1`] = `
<div
  style={
    Object {
      "border": "2px dashed #E4E7E9",
      "borderTop": "none",
      "position": "relative",
    }
  }
>
  <SectionMark
    description="This section automatically added product detail link, based on product detail mapping data"
    isDisplay={true}
    nonmandatory={false}
    onChange={[Function]}
    title="Product Detail"
  />
  <div
    style={
      Object {
        "marginInline": "auto",
        "maxWidth": "1280px",
        "padding": "5rem 4rem",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "16px 0",
          "marginBottom": "5rem",
        }
      }
    >
      <Typography
        className=""
        color="general-main"
        inline={false}
        variant="h3"
        weight="medium"
      >
        test
      </Typography>
      <TextField
        colorPlaceholder="black"
        control={Object {}}
        disabled={false}
        fontSize={14}
        multiline={true}
        name="productDetailsId[0].description"
        noSpacing={false}
        placeholder="Ketik konten judul di sini dalam Bahasa.."
        position="left"
        weight="normal"
      />
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={3}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          md={6}
          xs={12}
        >
          <WithStyles(ForwardRef(Card))>
            <WithStyles(ForwardRef(CardMedia))
              alt="test"
              component="img"
              image="test"
              style={
                Object {
                  "height": "100%",
                  "width": "40%",
                }
              }
            />
            <Styled(MuiBox)
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <WithStyles(ForwardRef(CardContent))>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="h5"
                    weight="normal"
                  >
                    test
                  </Typography>
                </div>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="caption"
                    weight="normal"
                  >
                    test description
                  </Typography>
                </div>
              </WithStyles(ForwardRef(CardContent))>
              <WithStyles(ForwardRef(CardActions))
                style={
                  Object {
                    "padding": "0 1rem 1rem",
                    "width": "100%",
                  }
                }
              >
                <Button
                  variant="ghost"
                >
                  Learn More
                </Button>
              </WithStyles(ForwardRef(CardActions))>
            </Styled(MuiBox)>
          </WithStyles(ForwardRef(Card))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </div>
    <div
      style={
        Object {
          "margin": "16px 0",
          "marginBottom": 0,
        }
      }
    >
      <Typography
        className=""
        color="general-main"
        inline={false}
        variant="h3"
        weight="medium"
      >
        test2
      </Typography>
      <TextField
        colorPlaceholder="black"
        control={Object {}}
        disabled={false}
        fontSize={14}
        multiline={true}
        name="productDetailsId[1].description"
        noSpacing={false}
        placeholder="Ketik konten judul di sini dalam Bahasa.."
        position="left"
        weight="normal"
      />
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={3}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          md={6}
          xs={12}
        >
          <WithStyles(ForwardRef(Card))
            className=""
          >
            <div>
              <Memo />
            </div>
            <Styled(MuiBox)
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <WithStyles(ForwardRef(CardContent))>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="h5"
                    weight="medium"
                  >
                    Automatically Generated
                  </Typography>
                </div>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="caption"
                    weight="normal"
                  >
                    This card was automatically generated by product detail mapping data
                  </Typography>
                </div>
              </WithStyles(ForwardRef(CardContent))>
            </Styled(MuiBox)>
          </WithStyles(ForwardRef(Card))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          md={6}
          xs={12}
        >
          <WithStyles(ForwardRef(Card))
            className=""
          >
            <div>
              <Memo />
            </div>
            <Styled(MuiBox)
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <WithStyles(ForwardRef(CardContent))>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="h5"
                    weight="medium"
                  >
                    Automatically Generated
                  </Typography>
                </div>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="caption"
                    weight="normal"
                  >
                    This card was automatically generated by product detail mapping data
                  </Typography>
                </div>
              </WithStyles(ForwardRef(CardContent))>
            </Styled(MuiBox)>
          </WithStyles(ForwardRef(Card))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </div>
  </div>
</div>
`;

exports[`src/containers/ContentManagement/Product/Add-v2/lib/section/ProductDetail/index render tab en 1`] = `
<div
  style={
    Object {
      "border": "2px dashed #E4E7E9",
      "borderTop": "none",
      "position": "relative",
    }
  }
>
  <SectionMark
    description="This section automatically added product detail link, based on product detail mapping data"
    isDisplay={true}
    nonmandatory={false}
    onChange={[Function]}
    title="Product Detail"
  />
  <div
    style={
      Object {
        "marginInline": "auto",
        "maxWidth": "1280px",
        "padding": "5rem 4rem",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "16px 0",
          "marginBottom": "5rem",
        }
      }
    >
      <Typography
        className=""
        color="general-main"
        inline={false}
        variant="h3"
        weight="medium"
      >
        test
      </Typography>
      <TextField
        colorPlaceholder="black"
        control={Object {}}
        disabled={false}
        fontSize={14}
        multiline={true}
        name="productDetailsId[0].description"
        noSpacing={false}
        placeholder="Ketik konten judul di sini dalam Bahasa.."
        position="left"
        weight="normal"
      />
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={3}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          md={6}
          xs={12}
        >
          <WithStyles(ForwardRef(Card))
            className=""
          >
            <div>
              <Memo />
            </div>
            <Styled(MuiBox)
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <WithStyles(ForwardRef(CardContent))>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="h5"
                    weight="medium"
                  >
                    Automatically Generated
                  </Typography>
                </div>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="caption"
                    weight="normal"
                  >
                    This card was automatically generated by product detail mapping data
                  </Typography>
                </div>
              </WithStyles(ForwardRef(CardContent))>
            </Styled(MuiBox)>
          </WithStyles(ForwardRef(Card))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          md={6}
          xs={12}
        >
          <WithStyles(ForwardRef(Card))
            className=""
          >
            <div>
              <Memo />
            </div>
            <Styled(MuiBox)
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <WithStyles(ForwardRef(CardContent))>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="h5"
                    weight="medium"
                  >
                    Automatically Generated
                  </Typography>
                </div>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="caption"
                    weight="normal"
                  >
                    This card was automatically generated by product detail mapping data
                  </Typography>
                </div>
              </WithStyles(ForwardRef(CardContent))>
            </Styled(MuiBox)>
          </WithStyles(ForwardRef(Card))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </div>
    <div
      style={
        Object {
          "margin": "16px 0",
          "marginBottom": 0,
        }
      }
    >
      <Typography
        className=""
        color="general-main"
        inline={false}
        variant="h3"
        weight="medium"
      >
        test2
      </Typography>
      <TextField
        colorPlaceholder="black"
        control={Object {}}
        disabled={false}
        fontSize={14}
        multiline={true}
        name="productDetailsId[1].description"
        noSpacing={false}
        placeholder="Ketik konten judul di sini dalam Bahasa.."
        position="left"
        weight="normal"
      />
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={3}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          md={6}
          xs={12}
        >
          <WithStyles(ForwardRef(Card))
            className=""
          >
            <div>
              <Memo />
            </div>
            <Styled(MuiBox)
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <WithStyles(ForwardRef(CardContent))>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="h5"
                    weight="medium"
                  >
                    Automatically Generated
                  </Typography>
                </div>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="caption"
                    weight="normal"
                  >
                    This card was automatically generated by product detail mapping data
                  </Typography>
                </div>
              </WithStyles(ForwardRef(CardContent))>
            </Styled(MuiBox)>
          </WithStyles(ForwardRef(Card))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          md={6}
          xs={12}
        >
          <WithStyles(ForwardRef(Card))
            className=""
          >
            <div>
              <Memo />
            </div>
            <Styled(MuiBox)
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <WithStyles(ForwardRef(CardContent))>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="h5"
                    weight="medium"
                  >
                    Automatically Generated
                  </Typography>
                </div>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="caption"
                    weight="normal"
                  >
                    This card was automatically generated by product detail mapping data
                  </Typography>
                </div>
              </WithStyles(ForwardRef(CardContent))>
            </Styled(MuiBox)>
          </WithStyles(ForwardRef(Card))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </div>
  </div>
</div>
`;

exports[`src/containers/ContentManagement/Product/Add-v2/lib/section/ProductDetail/index render tab id previewMode true 1`] = `
<div
  style={
    Object {
      "border": "none",
      "borderTop": "none",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "marginInline": "auto",
        "maxWidth": "1280px",
        "padding": "5rem 1rem",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "16px 0",
        }
      }
    >
      <Typography
        className=""
        color="general-main"
        inline={false}
        variant="h4"
        weight="medium"
      >
        test
      </Typography>
      <TextField
        colorPlaceholder="black"
        control={Object {}}
        fontSize={14}
        multiline={true}
        name="productDetailsEn[0].description"
        noSpacing={false}
        placeholder="Type the content of the title here in English.."
        position="left"
        weight="normal"
      />
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={3}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          md={6}
          xs={12}
        >
          <WithStyles(ForwardRef(Card))
            className=""
          >
            <div>
              <Memo />
            </div>
            <Styled(MuiBox)
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <WithStyles(ForwardRef(CardContent))>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="h5"
                    weight="medium"
                  >
                    Automatically Generated
                  </Typography>
                </div>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="caption"
                    weight="normal"
                  >
                    This card was automatically generated by product detail mapping data
                  </Typography>
                </div>
              </WithStyles(ForwardRef(CardContent))>
            </Styled(MuiBox)>
          </WithStyles(ForwardRef(Card))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          md={6}
          xs={12}
        >
          <WithStyles(ForwardRef(Card))
            className=""
          >
            <div>
              <Memo />
            </div>
            <Styled(MuiBox)
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <WithStyles(ForwardRef(CardContent))>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="h5"
                    weight="medium"
                  >
                    Automatically Generated
                  </Typography>
                </div>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="caption"
                    weight="normal"
                  >
                    This card was automatically generated by product detail mapping data
                  </Typography>
                </div>
              </WithStyles(ForwardRef(CardContent))>
            </Styled(MuiBox)>
          </WithStyles(ForwardRef(Card))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </div>
    <div
      style={
        Object {
          "margin": "16px 0",
        }
      }
    >
      <Typography
        className=""
        color="general-main"
        inline={false}
        variant="h4"
        weight="medium"
      >
        test2
      </Typography>
      <TextField
        colorPlaceholder="black"
        control={Object {}}
        fontSize={14}
        multiline={true}
        name="productDetailsEn[1].description"
        noSpacing={false}
        placeholder="Type the content of the title here in English.."
        position="left"
        weight="normal"
      />
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={3}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          md={6}
          xs={12}
        >
          <WithStyles(ForwardRef(Card))
            className=""
          >
            <div>
              <Memo />
            </div>
            <Styled(MuiBox)
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <WithStyles(ForwardRef(CardContent))>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="h5"
                    weight="medium"
                  >
                    Automatically Generated
                  </Typography>
                </div>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="caption"
                    weight="normal"
                  >
                    This card was automatically generated by product detail mapping data
                  </Typography>
                </div>
              </WithStyles(ForwardRef(CardContent))>
            </Styled(MuiBox)>
          </WithStyles(ForwardRef(Card))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          md={6}
          xs={12}
        >
          <WithStyles(ForwardRef(Card))
            className=""
          >
            <div>
              <Memo />
            </div>
            <Styled(MuiBox)
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <WithStyles(ForwardRef(CardContent))>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="h5"
                    weight="medium"
                  >
                    Automatically Generated
                  </Typography>
                </div>
                <div>
                  <Typography
                    className=""
                    color="general-main"
                    inline={false}
                    variant="caption"
                    weight="normal"
                  >
                    This card was automatically generated by product detail mapping data
                  </Typography>
                </div>
              </WithStyles(ForwardRef(CardContent))>
            </Styled(MuiBox)>
          </WithStyles(ForwardRef(Card))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </div>
  </div>
</div>
`;
